src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root{
  --primary: #0073E6;
  --secondary: #1C4980;
  --pink: #E9407A;
  --purple: #6548EE;
  --green: #05C165;
  --orange: #D63500;
  --primarylight: #F6F8FA;
  --lightGray:#8DA4BF;
  --borderColorLight: #DADCE0;
}

body {
  max-width: 100%;
  background: var(--primarylight);
  color: var(--secondary);
}
#menu .nav-link{
  border-radius: 8px;
  overflow: hidden;
  position: relative;
  padding: 10px 10px 12px;
}
#menu .nav-link.active{
  color: var(--primary);
  border: 1px solid currentColor;
}
#menu .nav-link .material-icons-outlined{
  font-size: 18px;
}
.site-content{
  position: relative;
  min-height: 110vh;
}
.opaque-bg{
  overflow: hidden;
}
.opaque-bg::before{
  content:'';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background: currentColor;
  opacity: .10;
}
.modal-backdrop{
	position: fixed;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	z-index: 90;
	background: rgba(0, 0, 0, 70%);
  display: none;
}
.modal{
	position: fixed;
	top:0;
	left: 0;
	height: 100%;
	padding: 20px;
	width: 100%;
	z-index: 80;
	opacity: 0;
	visibility: hidden;
	transition: all .3s ease-out;
	overflow-y:auto;
}
.modal::-webkit-scrollbar{
	width: 0;
}
.modal .modal-dialog{
    position: relative;
    z-index: 100;
    max-width: 590px;
    margin: 20px auto;
    pointer-events: none;
    background: #fff;
    border-radius: 12px;
		transition: all .3s;
		transform: translateY(80%);
}
.modal .modal-content{
    pointer-events: auto;
}
.modal.shown{
	opacity: 1;
	visibility: visible;
}
.modal.modal.shown .modal-dialog{
	transform: none;
}
.modal .modal-header{
  padding: 0 15px;
}
.modal .modal-body{
  padding: 20px 15px;
}
.modal .modal-header{
    border-bottom: 1px solid var(--borderColorLight);
}
.modal .close-modal{
	background: transparent;
	padding: 10px 0;
	border:none;
	cursor: pointer;
}
.form-group{
  margin-bottom: 20px;
}
.form-group label{
  display: block;
  margin-bottom: .65em;
}
.form-control{
  height: 50px;
  border-radius: 8px;
  border: 1px solid var(--borderColorLight);
  padding: 6px 15px;
  width: 100%;
}
.form-control.has-error{
  border-color: var(--orange);
}
.form-control:focus,.form-control:focus-visible{
  outline: 0;
  border-color: var(--secondary);
}
.btn[disabled] {
  opacity: 0.6;
}
.tab-panel{
  opacity: 0;
  visibility: hidden;
  transition: all .3s linear;
}
.tab-panel.active{
  visibility: visible;
  opacity: 1;
}
.loader{
  position: absolute;
  left: 0;
  top:0;
  width: 100%;
  height: 100%;
  background: rgba(255,255,255,.8);
  z-index: 80;
}
.pageTitle-wrapper,.site-nav{
  position: sticky;
  z-index: 100;
  top:0;
}
.pageTitle-wrapper{
  top: 45px;
}
@media screen and (min-width: 768px){
  .site-nav{
    position: static;
  }
	.modal .modal-body{
		padding: 15px 30px;
	}
  .modal .modal-header{
    padding: 0 30px;
  }
  .modal .close-modal{
    padding: 20px 0;
  }
  .pageTitle-wrapper{
    top: 0;
  }
}
.icon-tab.active{
  background: var(--primarylight);
  border: 1px solid var(--primary);
  border-radius: 50%;
  color: var(--primary);
}
@media screen and (min-width: 1024px){
  .site-nav{
    position: fixed;
    left: 0;
    top: 0;
  }
  .site-nav .modal-backdrop{
    display: none !important;
  }
  .site-content{
    max-width: calc(100% - 145px);
  }
}
@media screen and (max-width: 1023px){
  #menu{
    position: fixed;
    top:0;
    left: 0;
    bottom:0;
    background: var(--primarylight);
    padding: 30px 20px;
    overflow-y: auto;
    width: 80%;
    max-width: 360px;
    z-index: 120;
    transform: translateX(-20%);
    opacity: 0;
    visibility: hidden;
    transition: all .3s;
  }
  #menu.in{
    visibility: visible;
    transform: none;
    opacity: 1;
  }
  .toggle-siteMenu{
    position: fixed;
    left: 15px;
    top: 8px;
    z-index: 120;
  }
}
@media screen and (max-width: 767px){
  .toggle-siteMenu{
    position: static;
  }
  #overview-wrapper{
    max-height: 0;
    overflow: hidden;
    transition: all .3s linear;
  }
  #overview-wrapper.in{
    max-height: 100vh;
  }
}

